# price_parser_bot

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.db  main.py
app/api/: endpoints.py
app/bot/: handlers.py  states.py
app/core/: config.py  config_bot.py  database.py
app/db/: crud.py
app/models/: models.py
app/services/: data_processing.py  functions.py  parser.py
data/: test.xlsx
