[project]
name = "price-parser-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "aiosqlite==0.21.0",
    "fastapi==0.115.2",
    "httpx~=0.28.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "playwright==1.50.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.39",
    "uvicorn==0.34.0",
     "pytz==2025.1",
]
